update image & fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
     font-size: 18px;
 }
 
+body {
+    overflow-x: hidden;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 .row {
     padding: 10px 30px;
 }
@@ -66,9 +74,10 @@ p.middle-nav {
 }
 
 .headshot {
-    height: 250px;
+    width: 100%;
+    max-height: 250px;
     float: left;
-    margin: 0 50px;
+    margin: 0 auto;
 }
 
 .testimonials{
